# mas_domestic_robotics

./: .bandit  .gitbook.yaml  .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  Dockerfile  Doxyfile  README.md  cob.rviz  docker-compose.yml  mas-domestic-devel.rosinstall  mas-domestic.rosinstall  repository.debs  repository.rosinstall  sonar-project.properties
docs/: setup.md  (+3 more)
mdr_2dnav/: CMakeLists.txt  package.xml
mdr_2dnav/ros/launch/: 2dnav_tr.launch
mdr_behaviors/mdr_actions/: CMakeLists.txt  package.xml
mdr_behaviors/mdr_actions/ros/launch/: move_base_safe.launch  perceive_table.launch
mdr_behaviors/mdr_actions/ros/scripts/: move_base_safe
mdr_behaviors/mdr_actions/ros/tools/: perceive_table_client_test.py
mdr_behaviors/mdr_behaviors_msgs/: CMakeLists.txt  package.xml
mdr_behaviors/mdr_behaviors_msgs/msg/: CleanTable.srv  Pickup.srv
mdr_behaviors/mdr_haptic/: CMakeLists.txt  package.xml  setup.py
mdr_behaviors/mdr_haptic/ros/launch/: haptic_guidance.launch
mdr_behaviors/mdr_haptic/ros/scripts/: mdr_haptic_guidance_node
mdr_behaviors/mdr_table_cleaning/: CMakeLists.txt  package.xml
mdr_behaviors/mdr_table_cleaning/ros/src/: mcr_table_cleaning_mockup.cpp  table_cleaning_mockup.cpp
mdr_behaviors/mdr_tactile_grasp/: CMakeLists.txt  package.xml  setup.py
mdr_behaviors/mdr_tactile_grasp/ros/scripts/: monitors_node
mdr_common/mdr_common/: CMakeLists.txt  package.xml
mdr_common/mdr_topic_to_service/: CMakeLists.txt  package.xml
mdr_common/mdr_topic_to_service/ros/launch/: topic_to_service.launch
mdr_common/mdr_topic_to_service/ros/src/: topic_to_service_node.cpp
mdr_controllers/mdr_controllers/: CMakeLists.txt  package.xml
mdr_controllers/mdr_trajectory_controller/: CMakeLists.txt  package.xml
mdr_drivers/mdr_volksbot_motorcontroller/: CMakeLists.txt  package.xml
mdr_drivers/mdr_volksbot_motorcontroller/common/src/: com_adapter.cpp  robot_factory.cpp  robot_platform_differential_drive.cpp  robot_platform_volksbot_rt.cpp  timer.cpp
mdr_drivers/mdr_volksbot_motorcontroller/common/udev/: 99-volksbot.rules
mdr_drivers/mdr_volksbot_motorcontroller/ros/launch/: volksbot_motorcontroller.launch
mdr_drivers/mdr_volksbot_motorcontroller/ros/src/: volksbot_motorcontroller_node.cpp
mdr_environments/: CMakeLists.txt  README.md  groundfloor.filtered.bag_map2.yaml  groundfloor.yaml  package.xml  upload_param.launch
mdr_environments/brsu-022-dec2022/: navigation_goals.yaml
mdr_environments/brsu-c069/: map.pgm  map.yaml  navigation_goals.yaml
mdr_environments/brsu-c069-heartmet-work/: navigation_goals.yaml
mdr_environments/brsu-c069_20230403/: navigation_goals.yaml
mdr_environments/go-2019/: navigation_goals.yaml
mdr_environments/go-arena/: map.yaml  navigation_goals.yaml
mdr_environments/go-small-2019/: navigation_goals.yaml
mdr_environments/hbrs-ground-floor-cartographer/: map.yaml
mdr_environments/hbrs-ground-floor-gmapping/: navigation_goals.yaml
mdr_environments/hbrs-ground-floor-gmapping-clean/: map.yaml  navigation_goals.yaml
mdr_environments/hbrs-ground-floor-ropod/: map.yaml  navigation_goals.yaml
mdr_environments/launch/: rviz.launch
mdr_environments/rheinbach/: navigation_goals.yaml
mdr_environments/sciroc_mk_arena/: navigation_goals.yaml
mdr_environments/wrs20-arena/: map.pgm  map.yaml  navigation_goals.yaml
mdr_hri/mdr_hri/: CMakeLists.txt  package.xml
mdr_hri/mdr_mbot_interface/: CMakeLists.txt  package.xml  setup.py
mdr_hri/mdr_mbot_interface/ros/launch/: mbot_interface.launch
mdr_hri/mdr_mbot_interface/ros/scripts/: mbot_interface
mdr_hri/mdr_sound_collections/: CMakeLists.txt  package.xml
mdr_hri/mdr_sound_communication/: CMakeLists.txt  README.md  package.xml  setup.py
mdr_hri/mdr_sound_communication/config/: actions_config.yaml  alarms_config.yaml  services_config.yaml  states_config.yaml  topic_config.yaml
mdr_hri/mdr_sound_communication/ros/cfg/: soundCommunication.cfg
mdr_hri/mdr_sound_communication/ros/launch/: sound_test.launch
mdr_hri/mdr_sound_communication/ros/scripts/: sound_communication
mdr_hri/mdr_sound_communication/willow-sound/A/: ABeepProcessingFast.aif  AError2.aif  AHelp.aif  AHuh2.aif  AOneMomentPlease.aif
mdr_hri/mdr_sound_communication/willow-sound/B/: BGoAhead.aif  BHello.aif  BOneMomentPlease.aif
mdr_hri/mdr_sound_communication/willow-sound/C/: C2BeepsMed.aif  C2LowBeepSlow.aif  CAttention.aif  CBeepVary.aif  CDeBeep.aif  CKaching3.aif  CKachingFailed.aif  CMrnful.aif  CMrnful3.aif
mdr_hri/mdr_sound_communication/willow-sound/D/: D02f.aif  D02g.aif  D02h.aif  D02i.aif  D02j.aif  D05.aif  D07.aif  D10.aif  D11.aif  D16.aif  D23.aif  D29.aif  DAllDone.aif  DOuch.aif  DReadyToGo.aif  DRecvCmmnd1.aif
mdr_hri/mdr_sound_communication/willow-sound/E/: E01.aif  E03.aif  E11.aif  E14.aif  description.txt
mdr_hri/mdr_sound_communication/willow-sound/F/: F01.aif  F06.aif  F07.aif  F08.aif  F11.aif
mdr_hri/mdr_sound_communication/willow-sound/G/: G12.aif  G19.aif  G20.aif  G26.aif  G27a.aif  G29.aif  G34.aif  G35.aif  G38.aif
mdr_hri/mdr_sound_communication/willow-sound/I/: I05.aif  IAha1.aif  IAha3.aif  IAttn2.aif  IBatWarn1.aif  IFailure1.aif  IFailure2.aif  IFailure3.aif  IITried1.aif  IWohoo1.aif  IWohoo2.aif  IWohoo3.aif
mdr_hri/mdr_sound_communication/willow-sound/J/: JAhHa.aif  JAhHa2.aif  JHey.aif  JHm.aif  JUh.aif  JWooHoo2.aif
mdr_hri/mdr_sound_communication/willow-sound/K/: KHey-A1.aif  KHey-F#2.aif  KHugh.aif  KUgOh-C#3.aif
mdr_hri/mdr_sound_communication/willow-sound/L/: L11-G#5.aif  L14-D#4.aif  L26-G#3.aif  L27-F#2.aif
mdr_hri/mdr_sound_communication/willow-sound/M/: MIDidIt.aif  MOneMomentPlease.aif  MProcessing.aif  MWaiting.aif
mdr_hri/mdr_sound_vocalisation/: CMakeLists.txt  README.md  package.xml  setup.py
mdr_hri/mdr_sound_vocalisation/ros/launch/: sound_vocalisation.launch
mdr_hri/mdr_speech_pose_saver/: CMakeLists.txt  package.xml
mdr_kinematics/mdr_cob_head_kinematics/: CHANGELOG.rst  CMakeLists.txt  kinematics_plugins.xml  package.xml
mdr_kinematics/mdr_kinematics/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+2724 files in other folders)
