<?xml version="1.0"?>
<package format="2">
  <name>mdr_environments</name>
  <version>0.0.0</version>
  <description>The mdr_environments package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>

</package>
