<?xml version="1.0"?>
<package>
  <name>mdr_actions</name>
  <version>0.1.0</version>
  <description>
    Action servers for various skills such as pick, place, perceive, move_base etc.
  </description>

  <license>GPLv3</license>

  <author email="santosh.thoduka@inf.h-brs.de">Santosh Thoduka</author>
  <author email="alex.moriarty@inf.h-brs.de">Alex Moriarty</author>
  <author email="daniel.vazquez@inf.h-brs.de">Daniel Vazquez</author>
  <author email="iryna.ivanovska@inf.h-brs.de">Iryna Ivanovska</author>
  <author email="olima_84@yahoo.com">Oscar Lima</author>

  <maintainer email="santosh.thoduka@inf.h-brs.de">Santosh Thoduka</maintainer>
  <maintainer email="alex.moriarty@inf.h-brs.de">Alex Moriarty</maintainer>
  <maintainer email="daniel.vazquez@inf.h-brs.de">Daniel Vazquez</maintainer>
  <maintainer email="iryna.ivanovska@inf.h-brs.de">Iryna Ivanovska</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>mcr_perception_msgs</run_depend>
  <run_depend>mcr_states</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mcr_dynamic_reconfigure_client</run_depend>

  <test_depend>roslaunch</test_depend>

</package>
