<?xml version="1.0"?>
<package>
  <name>mdr_behaviors_msgs</name>
  <version>0.1.0</version>
  <description>The mdr_behaviors_msgs package</description>

  <author email="matthias.fueller@h-brs.de">Matthias Füller</author>
  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
<!--  <build_depend>arm_navigation_msgs</build_depend> -->
  <build_depend>message_generator</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>geometry_msgs</run_depend>
<!--  <run_depend>arm_navigation_msgs</run_depend> -->
  <run_depend>message_generator</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>