cmake_minimum_required(VERSION 2.8.3)
project(mdr_table_cleaning)

# find_package(catkin REQUIRED COMPONENTS roscpp mdr_behaviours_msgs)

# catkin_package(
#   INCLUDE_DIRS ros/include
#   CATKIN_DEPENDS roscpp mdr_behaviour_msgs
# )

# include_directories(
#   ${catkin_INCLUDE_DIRS}
# )

# add_executable(mdr_table_cleaning_mockup ros/src/table_cleaning_mockup.cpp)

# install(TARGETS mdr_table_cleaning_mockup
#    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

