<?xml version="1.0"?>
<package>
  <name>mdr_table_cleaning</name>
  <version>0.0.0</version>
  <description>The mdr_table_cleaning package</description>

  <author email="matthias.fueller@h-brs.de">Matthias Füller</author>
  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>