<?xml version="1.0"?>
<package>
  <name>mdr_topic_to_service</name>
  <version>0.0.1</version>
  <description>BAD PACKAGE, HAS TO BE REMOVED SOON ! ! !</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>GPLv3</license>

  <author email="jan.paulus@h-brs.de">Jan Paulus</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>mcr_perception_msgs</build_depend>
  <build_depend>mcr_speech_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>mcr_navigation_msgs</run_depend>
  <run_depend>mcr_perception_msgs</run_depend>
  <run_depend>mcr_speech_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
