<?xml version="1.0"?>
<package>
  <name>mdr_controllers</name>
  <version>0.0.1</version>
  <description>
    Supporting packages for (realtime) controllers of robots at BRSU.
  </description>
  <license>BSD</license>

  <author email="sven.schneider@h-brs.de">Sven Schneider</author>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>
  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <maintainer email="rhama.dwiputra@h-brs.de">Rhama Dwiputra</maintainer>
  <maintainer email="nico.hochgeschwender@h-brs.de">Nico Hochgeschwender</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
