<?xml version="1.0"?>
<package format="2">
  <name>mdr_mbot_interface</name>
  <version>0.0.0</version>
  <description>The mdr_mbot_interface package</description>

  <maintainer email="robotics@inf.h-brs.de">lucy</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
