<?xml version="1.0"?>
<package>
  <name>mdr_sound_collections</name>
  <version>0.1.0</version>
  <description>
      Sound File Collection
  </description>

  <author email="jose.mayoral@smail.inf.h-brs.de">Jose Mayoral</author>
  <maintainer email="jose.mayoral@smail.inf.h-brs.de">Jose Mayoral</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
