<?xml version="1.0"?>
<package>
  <name>mdr_sound_communication</name>
  <version>0.1.0</version>
  <description>
      Node to monitor topic through sounds
  </description>

  <author email="jose.mayoral@smail.inf.h-brs.de">Jose Mayoral</author>
  <maintainer email="jose.mayoral@smail.inf.h-brs.de">Jose Mayoral</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <test_depend>roslaunch</test_depend>
</package>
