<?xml version="1.0"?>
<package>
  <name>mdr_cob_head_kinematics</name>
  <version>0.0.1</version>
  <description>
    Inverse kinematics for pointing the torso/head of the Care-O-bot at a
    specified position.
  </description>
  <license>GPLv3</license>

  <author email="sven.schneider@h-brs.de">Sven Schneider</author>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rosunit</run_depend>

  <export>
    <moveit_core plugin="${prefix}/kinematics_plugins.xml"/>
  </export>
</package>
